프론트엔드 재작업
재작업완료

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>finalproject</name>
+	<name>22_web_project</name>
 	<comment></comment>
 	<projects>
 	</projects>
